First attempt at making handlebars connections--most likely not functioning

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,25 +10,11 @@
 
     <link rel="stylesheet" href="./style.css">
 
-    <title>Pokemon Team Builder - Home</title>
+    {{!-- <title>Pokemon Team Builder - Home</title> --}}
 </head>
 
 <body>
-    <h1 id="Welcome">Welcome to Your Pokemon Team Builder!</h1>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <!-- <button type="button" class="btn btn-pLarimary btn-lg">Create Account</button>
-                <button type="button" class="btn btn-secondary btn-lg">Login</button> -->
-                <button type="button" class="btn btn-primary btn-lg btn-block">Search Individual Pokemon Data</button>
-                <button type="button" class="btn btn-secondary btn-lg btn-block">Login for Your Team Data</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <img src="../assets/pokemonCollection.png" alt="" id="pokemonCol">
-            </div>
-        </div>
+
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
