--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,33 +2,6 @@
 <div class="menu-container">
   <div class="card-header col-md-10">
     <h2>
-      &#127869 Current Menu
+      Test Front End
     </h2>
-  </div>
-    <div>
-      <ol>
-        <li>
-          French Bread with Brie Cheese
-        </li>
-        <li>
-          Cheese Plate with Spanish Chorizo
-        </li>
-        <li>
-          Fish Tacos
-        </li>
-        <li>
-          Tropical Fruit Salad
-        </li>
-        <li>
-          Pork Gyoza
-        </li>
-        <li>
-          Yebeg Tibs with Injera Bread
-        </li>
-        <li>
-          Cape Malay Curry
-        </li>
-      </ol>
-    </div>
-  </div>
 </div>
