--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,7 +1,7 @@
 {{!-- <title>Pokemon Team Builder - Search</title> --}}
 
 <h1>Search Individual Pokemon</h1>
-<div class="container-fluid">
+<div class="container-fluid" style="background: url('/images/image0.jpeg'); background: url(/images/image0.jpeg); min-height: calc(100vh - 50px); background-size: cover; background-repeat: no-repeat;">
     <div class="row" id="padding2"></div>
     <div class="row">
         <div class="col-4"></div>
@@ -17,4 +17,10 @@
         </div>
         <div class="col-4"></div>
     </div>
+    <div class="row">
+        <div class="col-10" id="gameContainer" style="margin-top: 185px; margin-left: 25%;">
+
+        </div>
+    </div>
 </div>
+<script src="./js/search.js"></script>
