--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,25 +1,26 @@
 {{!-- <title>Pokemon Team Builder - Search</title> --}}
-
-<h1>Search Individual Pokemon</h1>
-<div class="container-fluid" style="background: url('/images/image0.jpeg'); background: url(/images/image0.jpeg); min-height: calc(100vh - 50px); background-size: cover; background-repeat: no-repeat;">
-    <div class="row" id="padding2"></div>
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-            <form>
-                <div class="form-group">
-                    <label for="inputSearch">Enter the Pokemon's Name:</label>
-                    <input type="text" class="form-control" id="pokeSearch">
-                    <small id="pokeSearch" class="form-text text-muted">Be sure to check spelling.</small>
-                </div>
-                <button type="submit" class="btn btn2 btn-primary">Submit</button>
-            </form>
+<div class="wallpaper">
+    <h1>Search Individual Pokemon</h1>
+    <div class="container-fluid">
+        <div class="row" id="padding2"></div>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <form>
+                    <div class="form-group">
+                        <label for="inputSearch">Enter the Pokemon's Name:</label>
+                        <input type="text" class="form-control" id="pokeSearch">
+                        <small id="pokeSearch" class="form-text text-muted">Be sure to check spelling.</small>
+                    </div>
+                    <button type="submit" class="btn btn2 btn-primary">Submit</button>
+                </form>
+            </div>
+            <div class="col-4"></div>
         </div>
-        <div class="col-4"></div>
-    </div>
-    <div class="row">
-        <div class="col-10" id="gameContainer" style="margin-top: 185px; margin-left: 25%;">
+        <div class="row">
+            <div class="col-10" id="gameContainer" style="margin-top: 185px; margin-left: 25%;">
 
+            </div>
         </div>
     </div>
 </div>
