--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,7 @@
    
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
-    <style>
-      html, body, pre, code, kbd, samp {
-          font-family: "Press Start 2P";
-      }
-    </style>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 
     
 
@@ -24,6 +19,7 @@
 </head>
 
 <body>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
