--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,18 +1,22 @@
 {{!-- <title>Pokemon Team Builder - Home</title> --}}
-
-<h1 id="Welcome">Welcome to Your Pokemon Team Builder!</h1>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <!-- <button type="button" class="btn btn-pLarimary btn-lg">Create Account</button>
-                <button type="button" class="btn btn-secondary btn-lg">Login</button> -->
-            <button type="button" class="btn btn-primary btn-lg btn-block">Search Individual Pokemon Data</button>
-            <button type="button" class="btn btn-secondary btn-lg btn-block">Login for Your Team Data</button>
+<div id="homepage">
+    <h2 id="welcome">Welcome to Your Pokemon Team Builder!</h2>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <!-- <button type="button" class="btn btn-pLarimary btn-lg">Create Account</button>
+                    <button type="button" class="btn btn-secondary btn-lg">Login</button> -->
+                <button type="button" class="nes-btn is-primary" id="searchBtn">Search Pokemon</button>
+                <button type="button" class="nes-btn is-primary" id="loginBtn">Login or Sign Up</button>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <img src="../assets/pokemonCollection.png" alt="" id="pokemonCol">
+        <div class="row">
+            <div class="col-12">
+                <img src="../assets/pokemonCollection.png" alt="" id="pokemonCol">
+            </div>
         </div>
     </div>
 </div>
+<script type="application/javascript">
+  document.body.classList.add("main-background");
+</script>
