--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -8,8 +8,8 @@
             <div class="col-4">
                 <form>
                     <div class="form-group">
-                        <label for="inputSearch">Enter the Pokemon's Name:</label>
-                        <input type="text" class="form-control" id="pokeSearch">
+                        <label for="textarea_field">Search for Pokemon</label>
+                        <textarea id="textarea_field" class="nes-textarea"></textarea>
                         <small id="pokeSearch" class="form-text text-muted">Be sure to check spelling.</small>
                     </div>
                     <button type="submit" class="btn btn2 btn-primary">Submit</button>
@@ -25,3 +25,6 @@
     </div>
 </div>
 <script src="./js/search.js"></script>
+<script type="application/javascript">
+  document.body.classList.add("awesome-background");
+</script>
