--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,52 @@
 
 body, html {
     height: 100%;
-    margin: 0;
+    margin: 0;  
+}
+html, body, pre, code, kbd, samp {
+    font-family: "Press Start 2P";
+}
+.awesome-background{
     background-image: url("https://i.imgur.com/YJBuO5c.jpg");
     background-position: center;
     background-repeat: repeat-y;
     background-size: cover;
-    
 }
-html, body, pre, code, kbd, samp {
-    font-family: "Press Start 2P";
+
+.main-background{
+    background-image: url("https://i.imgur.com/Z47FC0j.jpg");
+    background-position: center;
+    background-repeat: repeat-y;
+    background-size: cover;
+}
+
+.nes-textarea{
+    max-width: 300px;
+}
+
+.nes-field{
+    max-width: 500px;
+}
+
+.signup-form{
+    margin-top: 40px;
+}
+
+#loginDiv{
+    padding-top: 250px;
+    padding-left: 650px;
+}
+
+#homepage{
+    padding-left: 430px;
+    padding-top: 350px;
+}
+#searchBtn{
+    margin-top: 50px;
+    margin-left: 125px;
+}
+
+#loginBtn{
+    margin-top: 50px;
+    margin-left: 50px;
 }
