finished for presentation

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,3 +20,4 @@
 <script type="application/javascript">
   document.body.classList.add("main-background");
 </script>
+<script src="./js/home.js"></script>
