--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <input type="text" id="login-pass" class="nes-input">
       </div>
       <div class="nes-field">
-        <button type="button" class="nes-btn is-warning">Login</button>
+        <button type="button" class="nes-btn is-warning" id="login">Login</button>
       </div>
     </form>
   </div>
@@ -33,7 +33,7 @@
         <input type="text" id="signup-pass2" class="nes-input">
       </div>
       <div class="nes-field">
-        <button type="button" class="nes-btn is-warning">Signup</button>
+        <button type="button" class="nes-btn is-warning" id="signup">Signup</button>
       </div>
     </form>
   </div>
