--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <a><img src="https://i.imgur.com/ltTxeb7.png" alt="Pokessist Logo" id="logo"></a>
     <div id="team"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -27,7 +28,7 @@
     <main class="col-auto">
         {{{body}}}
     </main>
-
+<script src="./js/home.js"></script>
 </body>
 
 </html>
