--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,7 @@
 {{!-- <title>Pokemon Team Builder - Home</title> --}}
 <div id="homepage">
     <h2 id="welcome">Welcome to Your Pokemon Team Builder!</h2>
+    <div>{{team}}</div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
