--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,7 +29,7 @@
         <input type="text" id="signup-pass" class="nes-input">
       </div>
       <div class="nes-field">
-        <label for="password_field">Repeat Password</label>
+        <label for="password_field">Confirm Password</label>
         <input type="text" id="signup-pass2" class="nes-input">
       </div>
       <div class="nes-field">
