--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -12,14 +12,14 @@
                     <button type="button" class="nes-btn is-warning" id="searchSubmit">Submit</button>
                 </form>
             </div>
-        <div class="row">
-            <div class="col-10" id="gameContainer">
+            <div class="row">
+                <div class="col-10" id="gameContainer">
 
+                </div>
             </div>
         </div>
     </div>
-</div>
-<script src="./js/search.js"></script>
-<script type="application/javascript">
-  document.body.classList.add("awesome-background");
-</script>
+    <script src="/js/search.js"></script>
+    <script type="application/javascript">
+        document.body.classList.add("awesome-background");
+    </script>
